--- a/css/styles.css
+++ b/css/styles.css
@@ -56,11 +56,13 @@
   .nav-links {
     display: flex;
     gap: 2rem;
-    margin: 0 auto;
     justify-content: center;
+    align-items: center;
+    padding: auto auto; 
     width: 100%;
-    padding: 0 100px;
+    text-align: center;
   }
+  
   
   .nav-links a {
     color: var(--text-light);
