--- a/css/news.css
+++ b/css/news.css
@@ -79,10 +79,10 @@
     max-width: 900px;
     background: var(--card-bg);
     border-radius: 15px;
-    padding: 1rem 1.5rem 1.5rem 1.5rem;
+    padding: 2rem;
     box-shadow: 0 2px 10px #0001;
+    width: 90%;
   }
-  
   .reveal-title {
     text-align: center;
     font-size: 1.35rem;
