--- a/css/matches.css
+++ b/css/matches.css
@@ -347,6 +347,7 @@
     min-height: 110px;
     max-height: 500px;
     overflow-y: auto;
+    padding-top: .2rem;
 }
 .close-pbp { 
     position:absolute;
@@ -358,3 +359,17 @@
     font-size:1.3rem;
     cursor:pointer; 
 }
+
+.final-badge {
+    display: inline-block;
+    background: #10162f;
+    color: #fff;
+    font-weight: bold;
+    border-radius: 8px;
+    padding: 2px 12px;
+    margin-right: 12px;
+    font-size: 1em;
+    border: 2px solid #EF7C08;
+    letter-spacing: 1.5px;
+}
+   
