--- a/css/matches.css
+++ b/css/matches.css
@@ -430,7 +430,7 @@
     margin-top: 2px;
     letter-spacing: 1px;
   }
-  .team-name {
+  .team-name-stats {
     color: #EF7C08;
     font-size: 1.01em;
     font-weight: bold;
