--- a/css/matches.css
+++ b/css/matches.css
@@ -461,7 +461,7 @@
     position: relative;
     font-size: 1.16em;
     font-weight: 700;
-    color: var(--primary-color);
+    color: #fff;
     min-width: 38px;
     min-height: 20px;
     display: flex;
